--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -22,21 +22,25 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12ba04645b1141f98d832911532b2ae9",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "12ba04645b1141f98d832911532b2ae9"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "\n"
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -6918,7 +6922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3-final"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
