--- a/Class.ipynb
+++ b/Class.ipynb
@@ -200,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2080609581384\n",
-      "Mikey is 6 years old\n",
-      "2080609581384\n",
+      "1388704599848\n",
+      "Description: Mikey is 6 years old\n",
+      "ID: 1388704599848\n",
       "Mikey says Gruff Gruff\n"
      ]
     }
@@ -238,10 +238,173 @@
     "mikey = Dog(\"Mikey\", 6)\n",
     "\n",
     "# call our instance methods\n",
-    "print(mikey.description())\n",
-    "print(id(mikey)) # ! The self argument in the function declaration refers to the instance object that calls the function.\n",
+    "print('Description:', mikey.description())\n",
+    "print('ID:', id(mikey)) # ! The self argument in the function declaration refers to the instance object that calls the function.\n",
     "print(mikey.speak(\"Gruff Gruff\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class itself: {'__module__': '__main__', '__init__': <function Dog.__init__ at 0x0000014355462620>, 'description': <function Dog.description at 0x0000014355462840>, '__dict__': <attribute '__dict__' of 'Dog' objects>, '__weakref__': <attribute '__weakref__' of 'Dog' objects>, '__doc__': None} \n",
+      "\n",
+      "Class is a dictionary: {'name': 'Bobby', 'age': 10} \n",
+      "\n",
+      "Object in Class: <class 'str'> \n",
+      "\n",
+      "Class is a dictionary: {'name': 'Bobby', 'age': 10, 'size': 'L'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "\n",
+    "    # Initializer / Instance Attributes\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    # instance method\n",
+    "    def description(self):\n",
+    "        return \"{} is {} years old\".format(self.name, self.age)\n",
+    "\n",
+    "mikey = Dog('Bobby', 10)\n",
+    "\n",
+    "print('Class itself:', Dog.__dict__, '\\n')\n",
+    "print('Class is a dictionary:', mikey.__dict__, '\\n')\n",
+    "print('Object in Class:', mikey.name.__class__, '\\n')\n",
+    "\n",
+    "mikey.size = 'L'\n",
+    "\n",
+    "print('Class is a dictionary:', mikey.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Class is packed in a dictionary. With slots one can do it differently.\n",
+    "- __slots__ allows us to explicitly declare data members (like properties) and deny the creation of __dict__ and __weakref__ \n",
+    "- __slots__ is created on the class level\n",
+    "- Actually, __slots__ will deny the creation of __dict__ at all\n",
+    "- This behavior reduces the RAM usage of an object\n",
+    "-  However, __slots__ will fix the attributes when you create the class. So, it’s not possible to add new attributes later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class itself: {'__module__': '__main__', '__slots__': ['name', 'age'], '__init__': <function Dog.__init__ at 0x0000014355462598>, 'description': <function Dog.description at 0x0000014355462730>, 'age': <member 'age' of 'Dog' objects>, 'name': <member 'name' of 'Dog' objects>, '__doc__': None} \n",
+      "\n",
+      "Object in Class: <class 'member_descriptor'> \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "    __slots__ = ['name', 'age']\n",
+    "    \n",
+    "    # Initializer / Instance Attributes\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    # instance method\n",
+    "    def description(self):\n",
+    "        return \"{} is {} years old\".format(self.name, self.age)\n",
+    "\n",
+    "print('Class itself:', Dog.__dict__, '\\n')\n",
+    "print('Object in Class:', Dog.name.__class__, '\\n')\n",
+    "\n",
+    "mikey = Dog('Bobby', 10)\n",
+    "\n",
+    "# print('Class is a dictionary:', mikey.__dict__, '\\n') # AttributeError: 'Dog' object has no attribute '__dict__'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can fix it to add the __dict__ to the class!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class itself: {'__module__': '__main__', '__slots__': ['name', 'age', '__dict__'], '__init__': <function Dog.__init__ at 0x00000143553897B8>, 'description': <function Dog.description at 0x000001435544A7B8>, 'age': <member 'age' of 'Dog' objects>, 'name': <member 'name' of 'Dog' objects>, '__dict__': <attribute '__dict__' of 'Dog' objects>, '__doc__': None} \n",
+      "\n",
+      "Object in Class: <class 'member_descriptor'> \n",
+      "\n",
+      "Class is a dictionary: {} \n",
+      "\n",
+      "Class is a dictionary: {'size': 'L'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "    __slots__ = ['name', 'age', '__dict__']\n",
+    "    \n",
+    "    # Initializer / Instance Attributes\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    # instance method\n",
+    "    def description(self):\n",
+    "        return \"{} is {} years old\".format(self.name, self.age)\n",
+    "\n",
+    "print('Class itself:', Dog.__dict__, '\\n')\n",
+    "print('Object in Class:', Dog.name.__class__, '\\n')\n",
+    "\n",
+    "mikey = Dog('Bobby', 10)\n",
+    "\n",
+    "print('Class is a dictionary:', mikey.__dict__, '\\n')\n",
+    "\n",
+    "mikey.size = 'L'\n",
+    "\n",
+    "print('Class is a dictionary:', mikey.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -276,6 +439,61 @@
     "\n",
     "my_email.send_email()\n",
     "print(my_email.is_sent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Difference between repr() and str()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The __repr__ is for developers. The essential purpose is to explain what the object is in an unambiguous way.\n",
+    "- The __str__ is for end users. The essential purpose is to explain what data the object contains in a readable manner."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hallo\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "This is my E-Mail Obejct! of"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Email:\n",
+    "    def __init__(self, a):\n",
+    "        self.mya = a\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return 'This is my E-Mail Obejct! of'\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return self.mya\n",
+    "        \n",
+    "email = Email('hallo')\n",
+    "\n",
+    "print(email)\n",
+    "email"
    ]
   },
   {
@@ -865,7 +1083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
