--- a/Decorator/Decorator.ipynb
+++ b/Decorator/Decorator.ipynb
@@ -265,16 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Something is happening before the function is called.\n",
-      "Whee!\n",
-      "Something is happening after the function is called.\n"
+      "Something is happening before the function is called.\nSomething is happening before the function is called.\nWhee!\nSomething is happening after the function is called.\nSomething is happening after the function is called.\n"
      ]
     }
    ],
@@ -1064,9 +1062,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1078,7 +1075,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
